--- a/client/html/index.html
+++ b/client/html/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sny_simpleSelfDriving</title>
+    <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
+    <script src="js/sounds.js" type="text/javascript"></script>
+    <script src="js/window_listener.js" type="text/javascript"></script>
 </head>
 <body>
-    
+    <audio id="enableSound">
+        <source src="sounds/enable.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="disableSound">
+        <source src="sounds/disable.mp3" type="audio/mpeg">
+    </audio>
 </body>
 </html>
