--- a/client/html/index.html
+++ b/client/html/index.html
@@ -10,17 +10,19 @@
     <script src="js/window_listener.js" type="text/javascript"></script>
 </head>
 <body>
-    <audio id="enable">
-        <source src="sounds/enable.mp3" type="audio/mpeg">
-    </audio>
-    <audio id="disable">
-        <source src="sounds/disable.mp3" type="audio/mpeg">
-    </audio>
-    <audio id="destination_reached">
-        <source src="sounds/destination_reached.mp3" type="audio/mpeg">
-    </audio>
-    <audio id="error">
-        <source src="sounds/error.mp3" type="audio/mpeg">
-    </audio>
+    <div id="sounds">
+        <audio id="enable">
+            <source src="sounds/enable.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="disable">
+            <source src="sounds/disable.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="destination_reached">
+            <source src="sounds/destination_reached.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="error">
+            <source src="sounds/error.mp3" type="audio/mpeg">
+        </audio>
+    </div>
 </body>
 </html>
